--- a/.github/workflows/check-reactions.yml
+++ b/.github/workflows/check-reactions.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Check for new reactions
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
+          GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
           SMTP_HOST: ${{ secrets.SMTP_HOST }}
           SMTP_PORT: ${{ secrets.SMTP_PORT }}
           SMTP_USER: ${{ secrets.SMTP_USER }}
